[FIX] do not force z-index of toolbar

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@
     background: #222222;
     color: white;
     border-radius: 8px;
-    z-index: 1051;
 }
 .oe-toolbar.toolbar-bottom::before {
     content: '';
